MODDICORE-320: MarcBibRecordModifier and related test improved